# Encrypted-Matrix-Vector-Products

./: .gitignore  README.md
dataobjects/: CppWrapper.go  Fields.go  Matrix.go  common.cpp  common.go  common.h  cudaalloc.h  cudacommon.cu  cudacommon.h  cudacub.h  cudafields.cu  cudafields.h  cudagraph.cu  cudagraph.h  cudamatrices.cu  cudamatrices.h  cudaobj.cu  cudaobj.go  cudaobj.h  dataobj.go  dataobj.h  deferral.go  docontext.cpp  docontext.h  docontextimpl.h  doworker.go  fields.cpp  fields.h  hdcommon.h  matrices.cpp  matrices.h  mod_simd.h  plainfields.cpp  plainfields.h  plainmatrices.cpp  plainmatrices.h
ecc/: CppWrapper.go  ECC.go  ReedSolomon.cpp  ReedSolomon.go  ReedSolomon.h  cudaRS.cu  cudaRS.h  plainRS.cpp  plainRS.h
experiments-attacks/: CMakeLists.txt  README.md
experiments-attacks/cmake/: FindGMP.cmake
experiments-attacks/include/: constants.h  prvector.h  utils.h
experiments-attacks/src/: main-attacks.cpp  prvector.cpp  small-field-attacks.cpp  utils.cpp
linearcode/: EvaluationCode.go  LinearCode.go  RandomLinearCode.go
mvp/: CppWrapper.go  CppWrapper_cuda.go  CppWrapper_plain.go  cudaMST.cu  cudaMST.h  cudalpn.cu  cudalpn.h  cudamvp.cu  cudamvp.h  lpn.cpp  lpn.h  lpnMVP.go  matrixShapeTransform.cpp  matrixShapeTransform.h  mvp.cpp  mvp.h  mvp_test.go  plainMST.cpp  plainMST.h  plainlpn.cpp  plainlpn.h  plainmvp.cpp  plainmvp.h  ringSlsnMVP.go  slsnMVP.go
pir/: CppWrapper.go  CppWrapper_cuda.go  CppWrapper_plain.go  pir_test.go
scripts/: bench  clean  compile  g++-13.debug  gcc-13.debug  set-c-debug  set-c-profile  set-c-run  (+4 more)
(+31 files in other folders)
